add delete on search

--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -149,11 +149,16 @@
                                         (click)="viewTourPlan(child)">
                                     <mat-icon class="text-green" title="View land">visibility</mat-icon>
                                 </button>
+
                                 <button class="ml-2" mat-icon-button color="primary" *ngIf="CheckEditStatus(child)"
                                         (click)="editTourPlan(child)">
                                     <mat-icon style="margin-left: 5px;" title="Edit Tour Plan">edit</mat-icon>
                                 </button>
 
+                                <button class="ml-2" mat-icon-button color="primary" *ngIf="CheckEditStatus(child)"
+                                        (click)="deleteTourPlan(child)">
+                                    <mat-icon style="margin-left: 5px;" title="Delete Tour Plan">delete</mat-icon>
+                                </button>
 
                             </td>
                         </tr>
