--- a/src/app/modules/notification/legal-notices/legal-notices.component.html
+++ b/src/app/modules/notification/legal-notices/legal-notices.component.html
@@ -11,7 +11,7 @@
 >
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Demand Notices</div>
+            <div class="heading">Legal Notices</div>
         </div>
     </div>
 
