--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -49,6 +49,32 @@
                                             <input matInput formControlName="Month" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                        <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label>Tour Plan</mat-label>
+                                            <mat-select formControlName="TourPlanId">
+                                                <mat-option>
+                                                    Select
+                                                </mat-option>
+                                                <mat-option *ngFor="let obj of TourPlan" [value]="obj.TourPlanId">
+                                                    {{obj.DisbDesc}}
+                                                </mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                    </div>
+
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label class="customMatLabel">Date of Visit (ddMMyyyy) <strong class="matMandatory">*</strong>
+                                            </mat-label>
+                                            <input matInput [matDatepicker]="picker" formControlName="TourDate" maxlength="30" autocomplete="off"
+                                                   [max]="maxDate" (dateChange)="isEnableReceipt(false)" appNumberOnly/>
+                                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                            <mat-datepicker #picker></mat-datepicker>
+                                        </mat-form-field>
+                                    </div>
 <!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
 <!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
 <!--                                            <mat-label class="customMatLabel">Zone</mat-label>-->
@@ -58,6 +84,68 @@
                                     <app-zone-branch-circle [form]="gridForm" [should_show_circle]="false"
                                                             [is_required_circle]="false"
                                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+
+                                </div>
+
+                                <div class="sub-heading">Departure From
+                                </div>
+
+                                <div class="col-lg-12">
+                                    <div class="flex" style="flex-wrap: wrap;">
+                                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                                <mat-label class="customMatLabel">Departure Place</mat-label>
+                                                <input matInput formControlName="DepartureFromPlace" autocomplete="off"/>
+                                            </mat-form-field>
+                                        </div>
+
+                                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                                <mat-label class="customMatLabel">Departure Time</mat-label>
+                                                <input matInput formControlName="DepartureFromTime" autocomplete="off"/>
+                                            </mat-form-field>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="sub-heading">Arrival At
+                                </div>
+
+                                <div class="col-lg-12">
+                                    <div class="flex" style="flex-wrap: wrap;">
+                                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                                <mat-label class="customMatLabel">Arrival Place</mat-label>
+                                                <input matInput formControlName="ArrivalAtPlace" autocomplete="off"/>
+                                            </mat-form-field>
+                                        </div>
+
+                                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                                <mat-label class="customMatLabel">Arrival Time</mat-label>
+                                                <input matInput formControlName="ArrivalAtTime" autocomplete="off"/>
+                                            </mat-form-field>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-lg-12">
+                                    <div class="flex" style="flex-wrap: wrap;">
+                                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                                <mat-label class="customMatLabel">No. of defaulters contacted</mat-label>
+                                                <input matInput formControlName="NoOfDefaultersContacted" autocomplete="off"/>
+                                            </mat-form-field>
+                                        </div>
+
+                                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                                <mat-label class="customMatLabel">Results of contacts so made</mat-label>
+                                                <input matInput formControlName="ResultsOfContactsSoMade" autocomplete="off"/>
+                                            </mat-form-field>
+                                        </div>
+                                    </div>
 
                                 </div>
 
@@ -101,31 +189,31 @@
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
-                                                <input matInput>
+                                                <input matInput readonly="readonly">
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
-                                                <input matInput>
+                                                <input matInput readonly="readonly">
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
-                                                <input matInput>
+                                                <input matInput readonly="readonly">
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
-                                                <input matInput>
+                                                <input matInput readonly="readonly">
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
-                                                <input matInput>
+                                                <input matInput readonly="readonly">
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400"></td>
@@ -137,13 +225,13 @@
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
-                                                <input matInput>
+                                                <input matInput readonly="readonly">
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
-                                                <input matInput>
+                                                <input matInput readonly="readonly">
                                             </mat-form-field>
                                         </td>
                                     </tr>
