--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -96,7 +96,8 @@
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                                 <mat-label class="customMatLabel">Departure Time</mat-label>
-                                                <input matInput formControlName="DepartureFromTime" autocomplete="off"/>
+                                                <input type="text" matInput [ngxTimepicker]="timepickerDeparture" [format]="DateFormat()" readonly formControlName="DepartureFromTime"/>
+                                                <mat-icon matSuffix (click)="openFromIcon(timepickerDeparture)">schedule</mat-icon>
                                             </mat-form-field>
                                         </div>
                                     </div>
@@ -117,7 +118,9 @@
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                                 <mat-label class="customMatLabel">Arrival Time</mat-label>
-                                                <input matInput formControlName="ArrivalAtTime" autocomplete="off"/>
+                                                <input type="text" matInput [ngxTimepicker]="timepickerArrival" [format]="DateFormat()" readonly
+                                                       formControlName="ArrivalAtTime"/>
+                                                <mat-icon matSuffix (click)="openFromIcon(timepickerArrival)">schedule</mat-icon>
                                             </mat-form-field>
                                         </div>
                                     </div>
@@ -349,3 +352,6 @@
     </div>
 
 </div>
+
+<ngx-material-timepicker  #timepickerDeparture></ngx-material-timepicker>
+<ngx-material-timepicker #timepickerArrival></ngx-material-timepicker>
